# rate-limiter

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
limiter_engine/: Cargo.toml
limiter_engine/src/: client.rs  errors.rs  lib.rs  scripts.rs
limiter_engine/src/strategy/: fixed.rs  mod.rs  sliding.rs
limiter_engine/tests/: integration_tests.rs
src/: config.rs  handlers.rs  main.rs  middleware.rs
src/templates/: index.html
