[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "limiter_engine",
]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp"] }
tower-http = { version = "0.5", features = ["cors"] }
limiter_engine = { path = "./limiter_engine" }
